# pkg-exporter

./: .copier-answers.yml  .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  renovate.json  requirements.txt  setup.cfg  setup.py  texfile.py
.forgejo/workflows/: commitlint.yaml  lint.yaml  publish.yaml  test.yaml
.github/workflows/: build.yml  dpkg.yml  lint.yml  publish-to-pypi.yml  release.yml
docs/: 00-pve-exporter  90-pkg-exporter
pkgmanager/: apt.py
scripts/: build.py  lint.py
src/: textfile.py
src/pkg-exporter/: textfile.py
src/pkg_exporter/: reboot.py  textfile.py
src/pkg_exporter/pkgmanager/: apt.py
src/pkgmanager/: apt.py
