[project]
name = "pkg-exporter"
description = "This project provides an textfile-based exporter for apt-repositories"
authors = [{name = "Vanessa Gaube", email = "dev@vanessagaube.de"}]
license = "GPL-3.0"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "prometheus-client>=0.22.0",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

# TODO: URLs

# Scripts
[project.scripts]
pkg-exporter = 'pkg_exporter.textfile:main'

# Dev Dependencies
[tool.uv]
dev-dependencies = [
  "ruff",
]

# Scripts
[project.scripts]
pkg-exporter = 'pkg_exporter.textfile:main'

# TODO: Dev/CI scripts for lint & co.
