[project]
name = "pkg-exporter"
description = "This project provides an textfile-based exporter for apt-repositories"
authors = [{name = "Vanessa Gaube", email = "dev@vanessagaube.de"}]
license = "GPL-3.0"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "prometheus-client ==0.22.1",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

# TODO: URLs

# Scripts
[project.scripts]
pkg-exporter = 'pkg_exporter.textfile:main'

# Dev Dependencies
[tool.uv]
dev-dependencies = [
  "ruff",
  "pylint",
]
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true } }]

# TODO: Dev/CI scripts for lint & co.
