[project]
name = "pkg-exporter"
description = "This project provides an textfile-based exporter for apt-repositories"
authors = [{name = "Vanessa Gaube", email = "dev@vanessagaube.de"}]
license = "GPL-3.0"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "prometheus-client ==0.25.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"


[project.urls]
Documentation = "https://codeberg.org/margau/pkg-exporter/src/branch/main#readme"
Issues = "https://codeberg.org/margau/pkg-exporter/issues"
Source = "https://codeberg.org/margau/pkg-exporter.git"

# Scripts
[project.scripts]
pkg-exporter = "pkg_exporter.textfile:main"

[dependency-groups]
dev = [
  "ruff>=0.15.13",
  "pylint>=4.0.5",
  "pytest>=9.0.3",
  "coverage>=7.14.0",
]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true } }]

[tool.coverage.run]
source = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D104",
    "D107",
    "D200",
    "D203",
    "D205",
    "D213",
    "D400",
    "D401",
    "D415", # TODO: Remove later
    "FIX002", # TODO: Remove later
    "TD002", # TODO: Remove later
    "TD003", # TODO: Remove later
    "ANN", # TODO: Remove later
    "COM812",
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S101", "INP001", "PLR2004"]

# TODO: Dev/CI scripts for lint & co.
