[metadata]
name = pkg_exporter
description = This project provides an textfile-based exporter for apt-repositories
license = GNU General Public License v3.0
author = Marvin Gaube
author_email = dev@marvingaube.de
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/margau/pkg-exporter/

[options]
package_dir=
    =src
packages=find:
install_requires =
    prometheus-client

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    pkg-exporter = pkg_exporter.textfile:main